app/assets/stylesheets/_typography.scss
// Copied and cut down from node_modules/govuk-frontend/govuk/core/_typography
@import "lib/govuk-frontend/govuk/settings/all";
@import "lib/govuk-frontend/govuk/helpers/all";
@import "lib/govuk-frontend/govuk/tools/all";

$govuk-typography-use-rem: false;

#main-content {
  p, div {
    @extend .govuk-body
  }
  h1 {
    @extend .govuk-heading-l
  }
  h2 {
    @extend .govuk-heading-m
  }
  a {
    @extend .govuk-link
  }
}

